<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_tweet"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always|withText"
        android:title="@string/tweet"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_purge"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/purge">
    </item>
    <item
        android:id="@+id/itemPrefs"
        android:title="@string/titlePrefs"
        android:icon="@android:drawable/ic_menu_preferences" />
    <item
        android:title="@string/itemRefresh"
        android:id="@+id/itemRefresh"
        android:icon="@android:drawable/ic_menu_rotate" />
</menu>